--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -132,6 +132,13 @@ html{
   margin: auto;
 }
 
+#run-buddy {
+  height:300px;
+  width: 600px;
+  border: 3px solid rgb(0, 0, 0);
+  margin:5px;
+}
+
 
 .projects img {
   height:300px;
@@ -139,6 +146,7 @@ html{
   border: 3px solid rgb(0, 0, 0);
   margin:5px;
 }
+
 .projects a {
   height:326px;
   width: 325px;
@@ -150,6 +158,12 @@ html{
 
 @media screen and (max-width: 600px) {
   .projects img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #run-buddy {
     width: 100%;
   }
 }
